--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-ศิริญากรณ์ โพธิ์แก้ว
+<DOCTYPE html>
+<html lang="th">
+<head>
+     <!--====== Required meta taags ======-->
+     <meta charset="utf -8"  />
+     <meta http-equiv="x-ua-compatible" content="ie=edge"  />
+     <mete name="description" content="พอร์ตโฟลิโอ"  />
+     <meta name="author" content="นางสาวศิริญากรณ์ โพธิ์แก้ว">
+     <meta name="viewport" content="width=device-width, initial-scale=l, shrink-to-fit=no"  />
+    
+     <!--====== Title ======-->
+     <title>หน้าแรก!</title>
+</head>
+<body>
+    <img src="dobby.png" alt="รูปหมาของฉัน">
+</body>
+<html>
