--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="description" content="พอร์ตโฟลิโอ, ประวัติสวนตัว, พอร์ตเรียนต่อ, พอร์ตงาน, โปรไฟล์ของฉัน" />
-    <meta name="author" content="นายพัฒนา บุญถึง">
+    <meta name="description" content="พอร์ตโฟลิโอ, ประวัติของฉัน, โปรไฟล์ส่วนตัว" />
+    <meta name="author" content="นางสาวศิริญการณ์ โพธิ์แก้ว">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!--====== Title ======-->
-    <title>นี่คือ...ฉัน - พอร์ตโฟลิโอ || หน้าแรก</title>
+    <title>ก็อก ก็อก...นี่คือพอร์ตโฟลิโอ้ออมออม || หน้าแรก</title>
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <!--====== Google Fonts ======-->
@@ -44,7 +44,7 @@
         <header id="header" class="header">
             <div class="container-fluid">
                 <div class="brand">
-                    <a href="index.html" class="brand-name"><b>นี่คือ...</b> พอร์ตโฟลิโอของฉัน</a>
+                    <a href="index.html" class="brand-name"><b>ก็อก ก็อก...นี่คือ</b> พอร์ตโฟลิโอ้ออมออม</a>
                 </div>
 
                 <button class="nav-toggle-btn a-nav-toggle">
@@ -82,8 +82,8 @@
                         <div class="container">
                             <div class="number-email-cv">
                                 <ul class="number-email">
-                                    <li>มือถือ: (+66) 09-7247-812888</li>
-                                    <li>อีเมล์: pattanadevelop@gmail.com</li>
+                                    <li>มือถือ: (+66) 98-461-9879</li>
+                                    <li>อีเมล์: 25845@ds.ac.th</li>
                                 </ul>
                                     <li><a href="index.html">ไทย</a> | <a href="index-en.html">อังกฤษ</a></li>
                             </div>
@@ -91,15 +91,15 @@
                                 <div class="col-lg-5">
                                     <div class="about-content pt-100 rpt-0 animate-element delay5 fadeInUp">
                                         <span class="sub-title mb-15 animate-element delay3 fadeInUp">เกี่ยวกับฉัน</span>
-                                        <h2 class="slide-title animate-element delay5 fadeInUp">สวัสดีขอรับ,<br> ผม <span class="text-typed a-typed a-typed-about" data-text="พัฒนา บุญถึง"></span></h2>
+                                        <h2 class="slide-title animate-element delay5 fadeInUp">สวัสดีค่ะ,<br> ฉัน <span class="text-typed a-typed a-typed-about" data-text="พัฒนา บุญถึง"></span></h2>
                                         <h3 class="animate-element delay7 fadeInUp">โรงเรียนดาราสมุทร ศรีราชา</h3>
-                                        <p class="animate-element delay8 fadeInUp">วัน เดือน ปีเกิด<b>::)</b>  10 สิงหาคม 2521.</p>
-                                        <p class="animate-element delay8 fadeInUp">ชื่อเล่น<b>::)</b>  ยางมะตอย.</p>
-                                        <p class="animate-element delay8 fadeInUp">คติประจำใจ<b>::)</b>  อนาคตขึ้นอยู่กับสิ่งที่เราทำในปัจจุบัน.</p>
+                                        <p class="animate-element delay8 fadeInUp">วัน เดือน ปีเกิด<b>::)</b>  24 กรกฎาคม 2549 </p>
+                                        <p class="animate-element delay8 fadeInUp">ชื่อเล่น<b>::)</b>  ออมสิน </p>
+                                        <p class="animate-element delay8 fadeInUp">คติประจำใจ<b>::)</b> พอใจเท่าที่มี...ยินดีเท่าที่ได้ </p>
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
-                                            <a href="https://www.facebook.com/sirachadevelop"><i class="fab fa-facebook-f"></i></a>
-                                            <a href="https://www.twitter.com/sirachadevelop"><i class="fab fa-twitter"></i></a>
-                                            <a href="https://www.instagram/sirachadevelop"><i class="fab fa-instagram"></i></a>
+                                            <a href="https://www.facebook.com/Siriyakorn Pokeaw"><i class="fab fa-facebook-f"></i></a>
+                                            <a href="https://www.twitter.com/en_bl8"><i class="fab fa-twitter"></i></a>
+                                            <a href="https://www.instagram/julbeen"><i class="fab fa-instagram"></i></a>
                                         </div>
                                     </div>
                                 </div>
