--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                     <div class="service-image animate-element delay4 fadeInUp">
                                         <span class="sub-title mb-75">ไลท์สไตล์</span>
                                         <div class="service-inner-images">
-                                            <img src="assets/images/lifestyle/lifestyle.png" alt="Service">
+                                            <img src="assets/images/lifestyle/about (3).png" alt="Service">
                                             <img class="shape-one animate-element delay6 bounceIn" src="assets/images/lifestyle/shape-one-dark.png" alt="shape">
                                             <img class="shape-two animate-element delay8 bounceIn" src="assets/images/lifestyle/shape-two-dark.png" alt="shape">
                                         </div>
@@ -222,7 +222,7 @@
                                 <div class="col-lg-7">
                                     <div class="skill-image pt-55 text-lg-right animate-element delay4 fadeInUp">
                                         <div class="skill-images-inner">
-                                            <img src="assets/images/skills/skills.png" alt="Skills">
+                                            <img src="assets/images/skills/about (2).png" alt="Skills">
                                             <img class="shape-one animate-element delay6 bounceIn" src="assets/images/skills/shape-one.png" alt="shape">
                                             <img class="shape-two animate-element delay8 bounceIn" src="assets/images/skills/shape-two-dark.png" alt="shape">
                                         </div>
