--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <div class="col-lg-7">
                                     <div class="about-image pt-100 rpt-50 text-lg-right">
                                         <div class="about-inner-images">
-                                            <img class="animate-element delay7 fadeInUp" src="assets/images/about/about.png" alt="About">
+                                            <img class="animate-element delay7 fadeInUp" src="assets/images/about/about(4).png" alt="About">
                                             <img class="shape-one animate-element delay10 bounceIn" src="assets/images/about/shape-one-dark.png" alt="Shape">
                                             <img class="shape-two animate-element delay11 bounceIn" src="assets/images/about/shape-two-dark.png" alt="Shape">
                                         </div>
