--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                                 <div class="col-lg-5">
                                     <div class="service-content pt-100 rpt-55 animate-element delay5 fadeInUp">
                                         <div class="section-title mb-25">
-                                            <h2 class="slide-title animate-element delay5 fadeInUp">กิจกรรมพักผ่อน <span class="text-typed a-typed a-typed-services" data-text="กิจวัตร"></span> ในชีวิตประจำวันทั่วไป.</h2>
+                                            <h2 class="slide-title animate-element delay5 fadeInUp">กิจกรรมพักผ่อน <span class="text-typed a-typed a-typed-services" data-text="กิจวัตร"></span> ในชีวิตประจำวันทั่วไป</h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">โปรดปราน การดำเนินชีวิตแบบไลท์สไตล์ ตามธรรมชาติ, ธรรมดาๆ แบบชิวๆ <b>ไม่หรูหรา แต่เรียบง่าย.</b></p>
+                                        <p class="animate-element delay6 fadeInUp">นั่งๆนอนๆทั้งวันแต่ว่าจะสอบละ, แบบคนชิวๆ <b>dek68 ทำอะรายย</b></p>
                                         <div class="our-services animate-element delay8 fadeInUp">
                                             <div class="service-item">
                                                 <div class="icon">
@@ -147,7 +147,7 @@
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon2.png" alt="Icon">
                                                 </div>
-                                                <h4>เล่นเฟสต์บุ๊ค</h4>
+                                                <h4>ท่องเที่ยว</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
@@ -159,7 +159,7 @@
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon4.png" alt="Icon">
                                                 </div>
-                                                <h4>ว่ายน้ำ</h4>
+                                                <h4>นอน</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -176,14 +176,14 @@
                                     <div class="skill-content animate-element delay5 fadeInUp">
                                         <div class="section-title mb-25">
                                             <span class="sub-title mb-45">ทักษะพิเศษ</span>
-                                            <h2 class="slide-title animate-element delay5 fadeInUp">ฝึกฝน เรียนรู้ปฏิบัติ กลายเป็น <span class="text-typed a-typed a-typed-skills" data-text="ทักษะความรู้."></span></h2>
+                                            <h2 class="slide-title animate-element delay5 fadeInUp">ฝึกฝน เรียนรู้ปฏิบัติ กลายเป็น <span class="text-typed a-typed a-typed-skills" data-text="ทักษะความรู้"></span></h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">ความสามารถพิเศษ เป็นเครื่องมือยืนยัน ถึงประสบการณ์ ความรู้แต่ละบุคคล บ่งบอกถึง<b>ทักษะเฉพาะ.</b></p>
+                                        <p class="animate-element delay6 fadeInUp">ความสามารถพิเศษ เป็นเต้น/ร้องเพลง ประสบการณ์การพูดจา<b>ทักษะเฉพาะ</b></p>
                                         <div class="bar-list a-progressbar pt-5 animate-element delay9 fadeInUp">
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">ภาษาจีน</div>
-                                                    <div class="col-auto text-right bar-item-value">75%</div>
+                                                    <div class="col bar-item-title">ภาษาอังกฤษ</div>
+                                                    <div class="col-auto text-right bar-item-value">60%</div>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -191,8 +191,8 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">ภาษาญี่่ปุ่น</div>
-                                                    <div class="col-auto text-right bar-item-value">81%</div>
+                                                    <div class="col bar-item-title">การเอาตัวรอด</div>
+                                                    <div class="col-auto text-right bar-item-value">80%</div>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100"></div>
@@ -200,8 +200,8 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">คอมพิวเตอร์ออกแบบ</div>
-                                                    <div class="col-auto text-right bar-item-value">85%</div>
+                                                    <div class="col bar-item-title">การทำอาหาร</div>
+                                                    <div class="col-auto text-right bar-item-value">90%</div>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -209,8 +209,8 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">เขียนโปรแกรม</div>
-                                                    <div class="col-auto text-right bar-item-value">70%</div>
+                                                    <div class="col bar-item-title">การค้าขาย</div>
+                                                    <div class="col-auto text-right bar-item-value">95%</div>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
