--- a/index.html
+++ b/index.html
@@ -244,21 +244,21 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item animate-element delay5 fadeInUp">
-                                                <span class="years">2019-2022</span>
+                                                <span class="years">2022-2024</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">มัธยมศึกษาตอนปลาย</span>
-                                                    <h4 class="subject">แผนการเรียนจีน-อังกฤษ</h4>
+                                                    <h4 class="subject">แผนการเรียนคณิต-อังกฤษ</h4>
                                                     <h6 class="institution">โรงเรียนดาราสมุทร</h6>
-                                                    <p>ทักษะฟัง พูด อ่าน เขียน ดานภาษาจีน อังกฤษ และแกรมมา ไวยากรด้านภาษา วัฒนธรรมต่างชาติ.</p>
+                                                    <p>ทักษะฟัง พูด อ่าน เขียน ดานภาษาอังกฤษ และแกรมมา ไวยากรด้านภาษา วัฒนธรรมต่างชาติ</p>
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item animate-element delay8 fadeInUp">
-                                                <span class="years">2016-2019</span>
+                                                <span class="years">2019-2021</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">มัธยมศึกษาตอนต้น</span>
-                                                    <h4 class="subject">แผนการเรียนวิทย์-คณิต</h4>
+                                                    <h4 class="subject">แผนการเรียนคณิต-อังกฤษ</h4>
                                                     <h6 class="institution">โรงเรียนดาราสมุทร</h6>
-                                                    <p>วิทยาศาตร์ คณิตศาสตร์พื้นฐาน สิ่งมีชีวิต สสาร แรงโน้มถ่วง การบวก ลบ คูณ หาร ทศนิยม เรขาคณิตวิเคราะห์ .</p>
+                                                    <p>คณิตศาสตร์พื้นฐาน/เพิ่มเติม ภาษาอังกฤษ ลบ คูณ หาร ทศนิยม เรขาคณิตวิเคราะห์ และแกรมมา</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -272,11 +272,11 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item beahance animate-element delay7 fadeInUp">
-                                                <span class="years">2013-2016</span>
+                                                <span class="years">2016-2019</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">ระดับก่อนประถมศึกษา</span>
                                                     <h4 class="subject">โรงเรียนดาราสมุทร</h4>
-                                                    <p>ทักษะการใช้ชีวิตประจำวัน ตามสุขลักษณะ การพึ่งตนเอง การทำกิจกรรม การสื่อสารกับเพื่อน การนับเลข จำแนกสี กิจกรรมด้านรางการ การทรงตัว การหยิบวัตถุ.</p>
+                                                    <p>ทักษะการใช้ชีวิตประจำวัน ตามสุขลักษณะ การพึ่งตนเอง การทำกิจกรรม การสื่อสารกับเพื่อน การนับเลข จำแนกสี กิจกรรมด้านรางการ การทรงตัว การหยิบวัตถุ</p>
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item dribbble animate-element delay10 fadeInUp">
@@ -284,7 +284,7 @@
                                                 <div class="vacancy-content">
                                                     <span class="title">ระดับประถมศึกษา</span>
                                                     <h4 class="subject">โรงเรียนดาราสมุทร</h4>
-                                                    <p>การพูด ฟัง อ่าน เขียน พื้นฐาน ได้ถูกต้อง การบวก ลบ คูณ หาร ตัวเลข กิจกรรมเสริมสมรรถภาพร่างกาย ทักษะด้านภาษาต่างประเทศ มากกว่า 2 ภาษา.</p>
+                                                    <p>การพูด ฟัง อ่าน เขียน พื้นฐาน ได้ถูกต้อง การบวก ลบ คูณ หาร ตัวเลข กิจกรรมเสริมสมรรถภาพร่างกาย ทักษะด้านภาษาต่างประเทศ มากกว่า 2 ภาษา</p>
                                                 </div>
                                             </div>
                                         </div>
