--- a/index.html
+++ b/index.html
@@ -310,28 +310,16 @@
                             </div>
                             <div class="portfolio-wrap">
                                 <div class="portfolio-item animate-element delay11 fadeInUp">
-                                    <img src="assets/images/portfolio/portfolio_1.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port01.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item animate-element delay13 fadeInUp">
-                                    <img src="assets/images/portfolio/portfolio_2.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port02.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_3.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port03.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_4.png" alt="Portfolio">
-                                </div>
-                                <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_5.png" alt="Portfolio">
-                                </div>
-                                <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_6.png" alt="Portfolio">
-                                </div>
-                                <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_7.png" alt="Portfolio">
-                                </div>
-                                <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_8.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port04.png" alt="Portfolio">
                                 </div>
                             </div>
                         </div>
@@ -347,12 +335,12 @@
                                    <h2>ช่องทางการติดต่อ สื่อสาร</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">ศรีราชา, ชลบุรี</span>
-                               <h3 class="animate-element delay6 fadeInUp">pattanadevelop@gmail.com</h3>
-                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-7247-8128</h4>
+                               <h3 class="animate-element delay6 fadeInUp">ju1beensiriya@gmail.com</h3>
+                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 98-461-9879</h4>
                            </div>
                         </div>
                         <div class="footer-bottom-girl animate-element delay12 zoomIn">
-                           <img src="assets/images/contact/contact.png" alt="Footer Contact">
+                           <img src="assets/images/contact/cute.png" alt="Footer Contact">
                        </div>
                         <div class="footer-bottom-shape">
                             <img src="assets/images/contact/footer-bottom-shape.png" alt="Shape">
