--- a/index-en.html
+++ b/index-en.html
@@ -81,7 +81,7 @@
                             <div class="number-email-cv">
                                 <ul class="number-email">
                                     <li>Call me:(+66) 09-7247-8128</li>
-                                    <li>pattanadevelop@gmail.com</li>
+                                    <li>ju1beensiriya@gmail.com</li>
                                 </ul>
                                     <li><a href="index.html">Thai</a> | <a href="index-en.html">English</a></li>
                             </div>
