--- a/index-en.html
+++ b/index-en.html
@@ -81,7 +81,7 @@
                             <div class="number-email-cv">
                                 <ul class="number-email">
                                     <li>Call me:(+66) 09-7247-8128</li>
-                                    <li>ju1beensiriya@gmail.com</li>
+                                    <li>25845ds.ac.th@gmail.com</li>
                                 </ul>
                                     <li><a href="index.html">Thai</a> | <a href="index-en.html">English</a></li>
                             </div>
@@ -332,7 +332,7 @@
                                    <h2>Stay Connected</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">Si Racha, Chonburi</span>
-                               <h3 class="animate-element delay6 fadeInUp">ju1beensiriya@gmail.com</h3>
+                               <h3 class="animate-element delay6 fadeInUp">25845ds.ac.th@gmail.com</h3>
                                <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 98-461-9879</h4>
                                <!--<div class="social-style-two mt-25 animate-element delay11 fadeInUp">
                                     <a href="#"><img src="assets/images/contact/social-dribbble.png" alt="Social"></a>
