--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                    <h2>ช่องทางการติดต่อ สื่อสาร</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">ศรีราชา, ชลบุรี</span>
-                               <h3 class="animate-element delay6 fadeInUp">ju1beensiriya@gmail.com</h3>
+                               <h3 class="animate-element delay6 fadeInUp">25845ds.ac.th@gmail.com</h3>
                                <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 98-461-9879</h4>
                            </div>
                         </div>
